# SS20B-SStevenson

./: .arcconfig  .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  test.txt
compasweb/compasweb/: settings.py  urls.py
docker/: bokeh.Dockerfile  celery.Dockerfile  compas.Dockerfile  django.Dockerfile  nginx-entrypoint.sh  nginx.Dockerfile
nginx/: nginx.conf
src/: .env.template  Grid_demo.txt  manage.py  requirements.txt
src/compas/: __init__.py  celery.py  celery_pythonSubmit.py  demo_single_sys_plotter.py  settings.py  tasks.py  urls.py  wsgi.py
src/compasweb/: admin.py  apps.py  models.py  tests.py  urls.py  wsgi.py
src/compasweb/fixtures/: test_data.json  test_data_v2.json  test_data_v3.json
src/compasweb/forms/: model_parameters.py
src/compasweb/migrations/: 0001_initial.py  0002_compasjob_files.py  0003_auto_20200909_2147.py  0004_auto_20200921_1512.py  0005_auto_20201028_1312.py  0006_auto_20210111_1551.py  0007_auto_20210210_1527.py  0008_auto_20210325_1323.py  0009_auto_20210413_1307.py  0010_auto_20210413_1331.py  0011_auto_20210415_0929.py  0012_auto_20210420_1226.py
src/compasweb/tests/: test_models.py  test_urls.py  test_views.py
src/nginx/: nginx.conf
src/plotreact/: Droplist.js  InteractivePlot.js  MenuPlot.js  RechartsPlot.js  index.js  package-lock.json  package.json  rollup.config.js
src/plots/: compas_hebinplot.py  compas_hexbinplot.py  compas_scatterplots.py  pyproject.toml  requirements.txt  test_compas_hebinplot.py  test_compas_hexbinplot.py  test_compas_scatterplots.py
(+33 files in other folders)
