[tool.poetry]
name = "ss20b-sstevenson"
version = "0.1.0"
description = ""
authors = ["GWDC"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "<3"
environ = "^1.0"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pandas = "1.0.3"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
