[tool.poetry]
name = "plots"
version = "0.1.0"
description = "bokeh plots for compas"
authors = ["ADACS"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "^2.2.2"
h5py = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
